# civ-game-project

./: .gitignore  README.md  d  package-lock.json  run_backend.cmd  setup.cmd
backend/: .env.example  app.py  pyproject.toml  requirements.txt
database/: dummyData.sql  init.sql  resetTables.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: form-style.css  style.css
frontend/src/: App.js  App.tsx  ExampleComponent.tsx  PhaserGame.tsx  constants.ts  db-types.ts  main.tsx
frontend/src/components/: CreateGamePopup.tsx  ErrorBox.tsx  GameListBox.tsx  JoinPrivateGamePopup.tsx  JoinableGameDetailPopup.tsx  Navbar.jsx  OngoingGameDetailPopup.tsx  Popup.tsx  RegisteredGameDetailPopup.tsx  TextInput.tsx
frontend/src/game/: GamePage.tsx  gameConstructor.ts  main.ts
frontend/src/game/scenes/: BlackJackScene.ts  Game.ts  MainMenu.ts  MainScene.ts  Preloader.ts  TicTacToeScene.ts
frontend/src/pages/: AccountInfoPage.jsx  AccountInfoPage.tsx  CreateAccount.jsx  CreateAccountPage.jsx  CreateAccountPage.tsx  GamePage.tsx  Hub.jsx  Hub.tsx  Leaderboard.jsx  LoginPage.jsx  LoginPage.tsx
