[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-mysql==1.6.0",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mysql-connector-python==9.4.0",
    "pyjwt>=2.10.1",
    "pymysql==1.1.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]
